--- a/index.html
+++ b/index.html
@@ -693,6 +693,8 @@ Error message and password prompt
 
 <li>טל בייגלס</li>
 
+<li>טלוויזיה</li>
+
 <li>טלפון חכם</li>
 
 <li>יד ימין אינה יודעת</li>
@@ -9097,10 +9099,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190221183027209" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20190310130819784" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20190309074207748" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190310200021417" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9109,7 +9111,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חלון אחורי]] [[בשדרה בדרך הביתה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חלון אחורי]] טלוויזיה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9287,7 +9289,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20190221183917289" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]]" title="blue-marble-hood">
+<div created="20190221150238201" modified="20190310130839062" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
@@ -9956,7 +9958,7 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20181020104051284" modified="20181107101110512" tags="סדרות אימהות" title="אחוזת דאונטון">
+<div created="20181020104051284" modified="20190310130929650" tags="סדרות אימהות טלוויזיה" title="אחוזת דאונטון">
 <pre>[img[pictures/downton-abbey.jpg]]
 
 !!![[גורה]]:
@@ -10178,7 +10180,7 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20190214143129976" modified="20190226094258193" tags="סדרות" title="אלמנטרי">
+<div created="20190214143129976" modified="20190310131019697" tags="סדרות טלוויזיה" title="אלמנטרי">
 <pre>[img[pictures/elementary.jpg]]
 
 !!![[הצוות]]:
@@ -10186,7 +10188,7 @@ well,
 [[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.
 &lt;&lt;englink [[Elementary]]&gt;&gt;</pre>
 </div>
-<div created="20180218104549044" modified="20190126101817950" tags="[[אחיות חוץ]] סרטים סדרות" title="אלן בול">
+<div created="20180218104549044" modified="20190310131038803" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
@@ -10601,8 +10603,7 @@ Is where I want to be
 [[חנות הפרחים|http://bishvil-haprachim.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.</pre>
 </div>
 <div created="20190308172649378" modified="20190309101448489" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]]" title="בשדרה בדרך הביתה">
-<pre>
-[img[pictures/basdera.jpg]]
+<pre>[img[pictures/basdera.jpg]]
 
 !!![[תומר]]:
 
@@ -10665,7 +10666,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20171216174635678" modified="20190126102011900" tags="[[אחיות חוץ]] סרטים סדרות" title="ג'ון גודמן">
+<div created="20171216174635678" modified="20190310131128745" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="ג'ון גודמן">
 <pre>[img[pictures/john-goodman.jpg]]
 
 !!![[יויו]]:
@@ -10695,7 +10696,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170829074025058" modified="20190126102035599" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20190310131147652" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 [[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]] האהוב, שנתן את כל כולו.
@@ -11563,7 +11564,7 @@ Is where I want to be
 
 זה [[דיוויד ביירן|http://davidbyrne.com/]].</pre>
 </div>
-<div created="20170829174937405" modified="20180219163159757" tags="[[אחיות חוץ]] הסופרנוס מוזיקה" title="דיוויד צ'ייס">
+<div created="20170829174937405" modified="20190310131241746" tags="[[אחיות חוץ]] הסופרנוס מוזיקה טלוויזיה" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -11622,7 +11623,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.</pre>
 </div>
-<div created="20180307125005127" modified="20180405183441194" tags="סדרות [[חיות אוכל]]" title="דם אמיתי">
+<div created="20180307125005127" modified="20190310131301781" tags="סדרות [[חיות אוכל]] טלוויזיה" title="דם אמיתי">
 <pre>[img[pictures/true-blood.jpg]]
 
 !!![[יויו]]:
@@ -11721,7 +11722,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181844848" modified="20180704183533502" tags="סדרות מוזיקה בתים" title="האוס">
+<div created="20180414181844848" modified="20190310131339866" tags="סדרות מוזיקה בתים טלוויזיה" title="האוס">
 <pre>[img[pictures/house.jpg]]
 
 !!![[הצוות]]:
@@ -11842,7 +11843,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום אומנם לא הפך לתחביב שלי, אך אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
 </div>
-<div created="20170713130412612" modified="20171008153258453" tags="סדרות" title="הגשר">
+<div created="20170713130412612" modified="20190310131549210" tags="סדרות טלוויזיה" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
 
 !!![[יויו]]:
@@ -11929,7 +11930,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &quot;במעגל - אין ראשון ואין אחרון&quot;, הוא משפט שאני זוכרת ששמעתי פעם, אך לא מצאתי לו סימוכין.</pre>
 </div>
-<div created="20171207182155877" modified="20171217145515733" tags="סדרות" title="הורים במשרה מלאה">
+<div created="20171207182155877" modified="20190310131613452" tags="סדרות טלוויזיה" title="הורים במשרה מלאה">
 <pre>[img[pictures/parenthood.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12253,7 +12254,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
 </div>
-<div created="20170826115226554" modified="20181020120730721" tags="סדרות אימהות" title="הסופרנוס">
+<div created="20170826115226554" modified="20190310195337092" tags="סדרות אימהות טלוויזיה" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12298,7 +12299,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180619140440878" modified="20180630112924806" tags="סדרות" title="הסמויה">
+<div created="20180619140440878" modified="20190310195353678" tags="סדרות טלוויזיה" title="הסמויה">
 <pre>[img[pictures/the-wire.jpg]]
 
 !!![[אירי]]:
@@ -12634,13 +12635,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190309100625286" modified="20190309101750039" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
-<pre>
-[img[pictures/rear-window.jpg]]
+<div created="20190309100625286" modified="20190310200317180" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
+<pre>[img[pictures/rear-window.jpg]]
 
 !!![[תומר]]:
 
-[[בחלון האחורי|https://www.imdb.com/title/tt0047396/]] שלנו רק שומעים את יהודה הלוי ואת החשמונאים ואת עובדי [[התמ&quot;א|https://he.wikipedia.org/wiki/%D7%AA%D7%9E%22%D7%90_38]], ובלילה שומעים בחורות ובחורים ששרים ומנגנים בגיטרה.</pre>
+[[בחלון האחורי|https://www.imdb.com/title/tt0047396/]] שלנו בעיקר שומעים את יהודה הלוי והחשמונאים, ואת עובדי [[התמ&quot;א|https://he.wikipedia.org/wiki/%D7%AA%D7%9E%22%D7%90_38]]. בלילה שומעים בחורות ובחורים, שרים ומנגנים בגיטרה.</pre>
 </div>
 <div created="20170422160814236" modified="20180605132739043" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
@@ -12695,7 +12695,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
-<div created="20170711174005898" modified="20180507145158478" tags="סדרות [[אחיות חוץ]]" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20190310195427083" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
@@ -12766,7 +12766,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני לא פריק של פיצה אבל כשזה קורה אז [[בטוני וספה|https://www.tonyvespa.co.il/]], בעניין הזה אין שאלה.</pre>
 </div>
-<div created="20170922153729733" modified="20180130113644356" tags="הסופרנוס" title="טוני סופרנו">
+<div created="20170922153729733" modified="20190310195450564" tags="הסופרנוס טלוויזיה" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12839,6 +12839,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ישנם הימים בהם אני יוצא מהבית, חוצה את החשמונאים, ויורד דרך קריית ספר לפינת קרליבך 41, שם בהחלט נמצא מקום שאפשר לקרוא לו מוסד. הבייגלס תמיד טריים וטעימים, וכך גם הסלטים, המאפים, הקפה, המיץ. לשבת או לקחת. הבייתה או לפיקניק. 
 
 כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
+</div>
+<div created="20190310123955900" modified="20190310200134467" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
+<pre>[img[pictures/television.jpg]]
+
+!!![[תומר]]:
+
+אני יושב מול [[הטלוויזיה|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94]] בסלון, וצופה בתכנית שנקראת [[ואז הגיע ילד|https://www.haaretz.co.il/gallery/television/.premium-1.6975294]]. [[ננו המתוקה|ננו שלי ואני]] כבר ישנה, ואני חושב לעצמי - איזה מזל - אין לי את מי להאשים, אין לי עם מי לריב, אין התחשבנויות - רק ננו השמחה שלי ואני.
+
+
+&lt;&lt;list-links filter:&quot;[tag[טלוויזיה]]&quot;&gt;&gt;
+
+</pre>
 </div>
 <div created="20181006124035047" modified="20181006132141881" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
 <pre>[img[pictures/smart-phone.jpg]]
@@ -13002,7 +13014,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20181001132455506" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20190310130734009" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
@@ -13699,7 +13711,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס, מקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
 </pre>
 </div>
-<div created="20170923082157875" modified="20180227115738708" tags="הסופרנוס" title="כריסטופר מולטיסנטי">
+<div created="20170923082157875" modified="20190310195523585" tags="הסופרנוס טלוויזיה" title="כריסטופר מולטיסנטי">
 <pre>[img[pictures/christopher-moltisanti.jpg]]
 
 !!![[יויו]]:
@@ -13810,7 +13822,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180614102328845" modified="20180614172502350" tags="סדרות" title="להרוג את איב">
+<div created="20180614102328845" modified="20190310195551252" tags="סדרות טלוויזיה" title="להרוג את איב">
 <pre>[img[pictures/killing-eve.jpg]]
 
 !!![[אירי וגורה]]:
@@ -14319,7 +14331,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן. מגבות המטבח הן חברות.</pre>
 </div>
-<div created="20170926191733045" modified="20190219162200444" tags="הסופרנוס ילדים" title="מדו">
+<div created="20170926191733045" modified="20190310195628570" tags="הסופרנוס ילדים טלוויזיה" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
 
 !!![[אנג'ליק]]:
@@ -14768,7 +14780,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.</pre>
 </div>
-<div created="20180603160754396" modified="20180831115505874" tags="סדרות [[אחיות חוץ]] חבר" title="משחקי הכס">
+<div created="20180603160754396" modified="20190310195704157" tags="סדרות [[אחיות חוץ]] חבר טלוויזיה" title="משחקי הכס">
 <pre>[img[pictures/game-of-thrones.jpg]]
 
 !!![[יויו]]:
@@ -14948,7 +14960,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181025181017484" modified="20181105205905741" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="נתב">
+<div created="20181025181017484" modified="20190310195725713" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] טלוויזיה" title="נתב">
 <pre>[img[pictures/natav.jpg]]
 
 !!![[תומר]]:
@@ -14966,7 +14978,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20190219160859762" tags="" title="סדרות">
+<div created="20170711173812724" modified="20190310195745684" tags="טלוויזיה" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
@@ -15038,7 +15050,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171219115813335" modified="20190126104142768" tags="[[אחיות חוץ]] סרטים" title="סטיב בושמי">
+<div created="20171219115813335" modified="20190310195808213" tags="[[אחיות חוץ]] סרטים טלוויזיה" title="סטיב בושמי">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
 !!![[יויו]]:
@@ -15797,7 +15809,7 @@ To all you ladies out there, crying all alone in your room
 And all you fellas, going down south...Not making it back...
 May the lord bless your soul, I love you girl</pre>
 </div>
-<div created="20180214165830427" modified="20180228150800566" tags="סדרות [[אחיות חוץ]]" title="עמוק באדמה">
+<div created="20180214165830427" modified="20190310195839226" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="עמוק באדמה">
 <pre>[img[pictures/six-feet-under.jpg]]
 
 !!![[גורה]]:
@@ -16109,7 +16121,7 @@ __אופן ההכנה____
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
 </div>
-<div created="20170714125945456" modified="20190126104639177" tags="סדרות סרטים" title="פארגו">
+<div created="20170714125945456" modified="20190310195900211" tags="סדרות סרטים טלוויזיה" title="פארגו">
 <pre>[img[pictures/fargo.jpg]]
 
 !!![[יויו]]:
@@ -16712,7 +16724,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20180315162741420" tags="סדרות" title="קופים ממונעים">
+<div created="20170817155826253" modified="20190310195934824" tags="סדרות טלוויזיה" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
