יצנח לו טיפולתי, בריסטה, טבע עירוני

--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>ברי סחרוף</li>
 
+<li>בריסטה</li>
+
 <li>ברכת השמש</li>
 
 <li>בשביל הפרחים</li>
@@ -681,6 +683,8 @@ Error message and password prompt
 
 <li>טארט טאטן</li>
 
+<li>טבע עירוני</li>
+
 <li>טוטם</li>
 
 <li>טוני וספה</li>
@@ -718,6 +722,8 @@ Error message and password prompt
 <li>ים טתיס</li>
 
 <li>יסודי או ocd</li>
+
+<li>יצנח לו טיפולתי</li>
 
 <li>ירקות קלויים</li>
 
@@ -9104,7 +9110,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190314150012808" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190314150015818" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190408113719843" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9113,7 +9119,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פאי גבינה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="בריסטה [[טבע עירוני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9133,7 +9139,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190318103016098" title="$:/temp/search">
+<div created="20161023184814872" modified="20190402110903255" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10585,6 +10591,17 @@ Is where I want to be
 !!![[יויו]]:
 
 [[זה|http://magazin.org.il/userfiles/DSC_7393.JPG]] [[ברי|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99_%D7%A1%D7%97%D7%A8%D7%95%D7%A3]] שהיה נסיך שבעיקר [[ניגן|https://www.youtube.com/watch?v=qcP_q2kfRCA&amp;list=PLBmjKCWbbNAvbkO0ngXchr31HaV5OtCSl]] והיה למלך שכתב [[על נהר אספירין ישבנו|https://www.youtube.com/watch?v=2LH8kvivV-A]] והלחין את [[אבן גבירול|https://www.youtube.com/watch?v=iSJfAJ0VDN4]] ושר [[מאיר אריאל|https://www.youtube.com/watch?v=yOd4AIP_FSg]] ואין מילים.
+</pre>
+</div>
+<div created="20190324091820505" modified="20190408112438029" tags="[[כאן בגטו]] [[חיות אוכל]]" title="בריסטה">
+<pre>[img[pictures/barista.jpg]]
+
+!!![[תומר]]:
+
+בגטו הבועתי, זה ששמו יצא למרחקים כמי שתושביו ההזויים ויפי הנפש, יושבים ומלהגים ימים כלילות בבתי הקפה את ליהוגיהם השמאלניים והדקדנטיים, האצילות מחייבת - [[ובריסטות|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99%D7%A1%D7%98%D7%94]] רבות ורבים טובות וטובים מכינים לנו את הקפה במלוא הרצינות הניכרת במבטם המרוכז בחלב בעת הערבוב והמזיגה, במנח הגוף ובשקט עבודתם.
+
+(צולם [[בלחמים|לחמים]])
+
 </pre>
 </div>
 <div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
@@ -12314,7 +12331,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170705183317472" modified="20180704183839445" tags="[[המטבח על פי ז'נבייב]] בתים" title="הספלים מהם אנו שותים">
+<div created="20170705183317472" modified="20190321092211524" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]]" title="הספלים מהם אנו שותים">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12513,7 +12530,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180814103316187" modified="20180831115944845" tags="" title="חבר">
+<div created="20180814103316187" modified="20190329114932619" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -12755,6 +12772,30 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20190404183713312" modified="20190408114406463" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]]" title="טבע עירוני">
+<pre>[img[pictures/zirey-kaitz.jpg]]
+
+!!![[תומר]]:
+
+מהחלון של החצר הפנימית שלנו אפשר לראות:
+
+&quot;[[זרעי קיץ|https://www.youtube.com/watch?v=wJOH-zKfQfs]] 
+
+נישאים ברוח
+
+מעירים זכרונות
+
+מעוררים ערגונות
+
+זרעי קיץ באים בנחיריים
+
+ורומזים איזה קיץ
+
+הולך להיות&quot;
+
+מילים: [[מאיר אריאל]], לחן: מאיר אריאל [[ושלום חנוך|שלום חנוך]]
+</pre>
+</div>
 <div created="20181114151208287" modified="20181114154007734" tags="[[נאמני הגנזך]] [[אירי וגורה]] [[חלומות שחלמנו]] חבר" title="טוטם">
 <pre>[img[pictures/totem.jpg]]
 
@@ -12845,12 +12886,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
 </div>
-<div created="20190310123955900" modified="20190311095918694" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
+<div created="20190310123955900" modified="20190323113625750" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
 <pre>[img[pictures/television.jpg]]
 
 !!![[תומר]]:
 
-אני יושב מול [[הטלוויזיה|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94]] בסלון, וצופה בתכנית שנקראת [[ואז הגיע ילד|https://www.haaretz.co.il/gallery/television/.premium-1.6975294]]. [[ננו המתוקה|ננו שלי ואני]] כבר ישנה, ואני חושב לעצמי - איזה מזל - אין לי את מי להאשים, אין לי עם מי לריב, אין התחשבנויות - רק ננו השמחה שלי ואני.
+אני יושב מול [[הטלוויזיה|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94]] בסלון, וצופה בתכנית שנקראת [[ואז הגיע ילד|https://www.haaretz.co.il/gallery/television/.premium-1.6975294]]. [[ננו המתוקה|ננו שלי ואני]] כבר ישנה, ואני חושב לעצמי, איזה מזל - אין לי את מי להאשים, אין לי עם מי לריב, אין התחשבנויות - רק ננו השמחה שלי ואני.
 
 
 &lt;&lt;list-links filter:&quot;[tag[טלוויזיה]]&quot;&gt;&gt;
@@ -12995,6 +13036,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[יויו]]:
 
 לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd, ולאחרונה גיליתי שיש דבר כזה שנקרא legit ocd ומה רבה שמחתי.</pre>
+</div>
+<div created="20190319161807133" modified="20190408112722996" tags="[[כאן בגטו]]" title="יצנח לו טיפולתי">
+<pre>[img[pictures/tipulati.jpg]]
+
+!!![[תומר]]:
+
+כן, מסתבר שככה קוראים [[ליצור הזה|https://he.wikipedia.org/wiki/%D7%98%D7%99%D7%A4%D7%95%D7%9C%D7%AA%D7%99%D7%99%D7%9D]], שהוא בעצם זבוב, שמרפרף לך בבית באיטיות מקרטעת, כאילו כל משק כנפיים הוא המפעיל את המשק הבא. לפעמים הוא נח על ארון או על קיר, עד שלבסוף הוא יצנח אל מותו, ואני אמצא אותו בבוקר על הרצפה בדרך לחדר של [[ננו הקטנה|ננו שלי ואני]], לא סגור על עצמי אם כבר אפשר להכריז על מותו, להרים אותו עם מפית ולקבור אותו בפח האשפה, ובראשי יחלוף המשפט: // האביב כבר כאן//.
+
+</pre>
 </div>
 <div created="20170422205250692" modified="20180605132756716" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
@@ -13972,7 +14022,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190307134032762" modified="20190307170428222" tags="[[כאן בגטו]]" title="לחם תושיה שינקין">
+<div created="20190307134032762" modified="20190319142040576" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה" title="לחם תושיה שינקין">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 !!![[תומר]]:
@@ -14273,7 +14323,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''האם מותר לכם לפרסם את הגירסה החדשה שלכם ברשת?''
 כן, במסגרת תנאי הרשיון (לפרטים, לחצו על ה&lt;img alt=&quot;Creative Commons License&quot; style=&quot;width:44px; border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot;&gt; בצד ימין למטה)</pre>
 </div>
-<div created="20170328175210280" modified="20180208153704935" tags="[[אחיות חוץ]] מוזיקה" title="מאיר אריאל">
+<div created="20170328175210280" modified="20190408113757510" tags="[[אחיות חוץ]] מוזיקה" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 
@@ -14293,7 +14343,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כלומר:
 
-[[מאיר אריאל  ז&quot;ל|https://he.wikipedia.org/wiki/%D7%9E%D7%90%D7%99%D7%A8_%D7%90%D7%A8%D7%99%D7%90%D7%9C]], 
+[[מאיר אריאל  זצ&quot;ל|https://he.wikipedia.org/wiki/%D7%9E%D7%90%D7%99%D7%A8_%D7%90%D7%A8%D7%99%D7%90%D7%9C]], 
 </pre>
 </div>
 <div created="20170601174031503" modified="20170601223003837" tags="[[בחוות החיות]]" title="מאכילים את המצפון">
