--- a/index.html
+++ b/index.html
@@ -411,8 +411,6 @@ Error message and password prompt
 
 <li>ברי סחרוף</li>
 
-<li>בריסטה</li>
-
 <li>ברכת השמש</li>
 
 <li>בשביל הפרחים</li>
@@ -546,6 +544,8 @@ Error message and password prompt
 <li>האסיפה הראשונה</li>
 
 <li>הארי דין סטנטון</li>
+
+<li>הבריסטות שכאן</li>
 
 <li>הברמנית</li>
 
@@ -9119,7 +9119,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="בריסטה [[טבע עירוני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הבריסטות שכאן]] [[טבע עירוני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10593,17 +10593,6 @@ Is where I want to be
 [[זה|http://magazin.org.il/userfiles/DSC_7393.JPG]] [[ברי|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99_%D7%A1%D7%97%D7%A8%D7%95%D7%A3]] שהיה נסיך שבעיקר [[ניגן|https://www.youtube.com/watch?v=qcP_q2kfRCA&amp;list=PLBmjKCWbbNAvbkO0ngXchr31HaV5OtCSl]] והיה למלך שכתב [[על נהר אספירין ישבנו|https://www.youtube.com/watch?v=2LH8kvivV-A]] והלחין את [[אבן גבירול|https://www.youtube.com/watch?v=iSJfAJ0VDN4]] ושר [[מאיר אריאל|https://www.youtube.com/watch?v=yOd4AIP_FSg]] ואין מילים.
 </pre>
 </div>
-<div created="20190324091820505" modified="20190408112438029" tags="[[כאן בגטו]] [[חיות אוכל]]" title="בריסטה">
-<pre>[img[pictures/barista.jpg]]
-
-!!![[תומר]]:
-
-בגטו הבועתי, זה ששמו יצא למרחקים כמי שתושביו ההזויים ויפי הנפש, יושבים ומלהגים ימים כלילות בבתי הקפה את ליהוגיהם השמאלניים והדקדנטיים, האצילות מחייבת - [[ובריסטות|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99%D7%A1%D7%98%D7%94]] רבות ורבים טובות וטובים מכינים לנו את הקפה במלוא הרצינות הניכרת במבטם המרוכז בחלב בעת הערבוב והמזיגה, במנח הגוף ובשקט עבודתם.
-
-(צולם [[בלחמים|לחמים]])
-
-</pre>
-</div>
 <div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
 
@@ -11847,6 +11836,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].</pre>
 </div>
+<div created="20190324091820505" modified="20190408120917561" tags="[[כאן בגטו]] [[חיות אוכל]]" title="הבריסטות שכאן">
+<pre>[img[pictures/barista.jpg]]
+
+!!![[תומר]]:
+
+בגטו הבועתי, זה ששמו יצא למרחקים כמי שתושביו ההזויים ויפי הנפש, יושבים ומלהגים ימים כלילות בבתי הקפה את ליהוגיהם השמאלניים והדקדנטיים, האצילות מחייבת - [[ובריסטות|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%99%D7%A1%D7%98%D7%94]] רבות ורבים טובות וטובים מכינים לנו את הקפה במלוא הרצינות הניכרת במבטם המרוכז בחלב בעת הערבוב והמזיגה, במנח הגוף ובשקט עבודתם.
+
+(צולם [[בלחמים|לחמים]])
+
+</pre>
+</div>
 <div created="20161217141221233" modified="20170507181732133" tags="HH" title="הברמנית">
 <pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
 
@@ -13037,12 +13037,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd, ולאחרונה גיליתי שיש דבר כזה שנקרא legit ocd ומה רבה שמחתי.</pre>
 </div>
-<div created="20190319161807133" modified="20190408112722996" tags="[[כאן בגטו]]" title="יצנח לו טיפולתי">
+<div created="20190319161807133" modified="20190408120612318" tags="[[כאן בגטו]]" title="יצנח לו טיפולתי">
 <pre>[img[pictures/tipulati.jpg]]
 
 !!![[תומר]]:
 
-כן, מסתבר שככה קוראים [[ליצור הזה|https://he.wikipedia.org/wiki/%D7%98%D7%99%D7%A4%D7%95%D7%9C%D7%AA%D7%99%D7%99%D7%9D]], שהוא בעצם זבוב, שמרפרף לך בבית באיטיות מקרטעת, כאילו כל משק כנפיים הוא המפעיל את המשק הבא. לפעמים הוא נח על ארון או על קיר, עד שלבסוף הוא יצנח אל מותו, ואני אמצא אותו בבוקר על הרצפה בדרך לחדר של [[ננו הקטנה|ננו שלי ואני]], לא סגור על עצמי אם כבר אפשר להכריז על מותו, להרים אותו עם מפית ולקבור אותו בפח האשפה, ובראשי יחלוף המשפט: // האביב כבר כאן//.
+כן, מסתבר שככה קוראים [[ליצור הזה|https://he.wikipedia.org/wiki/%D7%98%D7%99%D7%A4%D7%95%D7%9C%D7%AA%D7%99%D7%99%D7%9D]], שהוא בעצם זבוב, שמרפרף לך בבית באיטיות מקרטעת, כאילו כל משק כנפיים מפעיל את המשק הבא. לפעמים הוא נח על ארון או על קיר, עד שלבסוף הוא יצנח אל מותו, ואני אמצא אותו בבוקר על הרצפה בדרך לחדר של [[ננו הקטנה|ננו שלי ואני]], לא סגור על עצמי אם כבר אפשר להכריז על מותו, להרים אותו עם מפית ולקבור אותו בפח האשפה, ובראשי יחלוף המשפט: // האביב כבר כאן//.
 
 </pre>
 </div>
